# yt-meta

./: .gitignore  Cargo.toml  channels.txt
src/: main.rs  models.rs  schema.rs  ytdlp.rs
