[package]
name = "yt-meta"
version = "1.0.0"
edition = "2021"

[dependencies]
serde_with = {version = "2.0.1", features = ["chrono"] }
serde= { version = "1.0", features = ["derive"] }
serde_json = "1.0.87"
csv = "1.1"
rayon = "1.5.3"
diesel = { version = "2.0.2", features = ["postgres", "chrono"] }
dotenvy = "0.15"
clap = { version = "4.0.22", features = ["derive"] }
chrono = { version = "0.4.23", features = ["serde"] }
